--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,21 @@
-<h1>This is index.html</h1>
+<!doctype html>
+
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+    <title>Angular Todo</title>
+    <meta name="description" content="Angular Todo">
+    <meta name="author" content="Chaudhry Junaid Anwar">
+
+    <!--<link rel="stylesheet" href="?v=1.0">-->
+
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+<!--<script src="js/"></script>-->
+</body>
+</html>
