--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Angular Todo">
     <meta name="author" content="Chaudhry Junaid Anwar">
 
-    <!--<link rel="stylesheet" href="?v=1.0">-->
+    <link rel="stylesheet" href="css/common.css?v=1.0">
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,6 +16,10 @@
 </head>
 
 <body>
-<!--<script src="js/"></script>-->
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 </body>
 </html>
