--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Angular Todo">
     <meta name="author" content="Chaudhry Junaid Anwar">
 
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/common.css?v=1.0">
 
     <!--[if lt IE 9]>
@@ -15,11 +17,26 @@
     <![endif]-->
 </head>
 
-<body>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-cookies/angular-cookies.js"></script>
-<script src="bower_components/angular-resource/angular-resource.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+<body ng-app="todo">
+
+<h1 class="">Welcome to AngularJS</h1>
+
+<script src="angular/angular.js"></script>
+<script src="angular-cookies/angular-cookies.js"></script>
+<script src="angular-resource/angular-resource.js"></script>
+<script src="angular-route/angular-route.js"></script>
+<script src="bootstrap/dist/js/bootstrap.js"></script>
+<script src="angular-bootstrap/ui-bootstrap.js"></script>
+
+<script src="js/app.js"></script>
+<script src="js/config.js"></script>
+<script src="js/directives.js"></script>
+<script src="js/filters.js"></script>
+
+<script src="js/services/global.js"></script>
+<script src="js/services/index.js"></script>
+
+<script src="js/controllers/index.js"></script>
+
 </body>
 </html>
