basic angular setup

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,15 @@
     <![endif]-->
 </head>
 
-<body ng-app="todo">
+<body ng-app="todoApp">
 
-<h1 class="">Welcome to AngularJS</h1>
+<div ng-view></div>
 
 <script src="angular/angular.js"></script>
 <script src="angular-cookies/angular-cookies.js"></script>
 <script src="angular-resource/angular-resource.js"></script>
 <script src="angular-route/angular-route.js"></script>
+<script src="jquery/dist/jquery.js"></script>
 <script src="bootstrap/dist/js/bootstrap.js"></script>
 <script src="angular-bootstrap/ui-bootstrap.js"></script>
 
@@ -36,7 +37,7 @@
 <script src="js/services/global.js"></script>
 <script src="js/services/index.js"></script>
 
-<script src="js/controllers/index.js"></script>
+<script src="js/controllers/login.js"></script>
 
 </body>
 </html>
