setup for calling login service

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <script src="js/filters.js"></script>
 
 <script src="js/services/global.js"></script>
-<script src="js/services/index.js"></script>
+<script src="js/services/login.js"></script>
 
 <script src="js/controllers/login.js"></script>
 
