--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,10 @@
 
 <script src="js/services/global.js"></script>
 <script src="js/services/login.js"></script>
+<script src="js/services/todo.js"></script>
 
 <script src="js/controllers/login.js"></script>
+<script src="js/controllers/todo.js"></script>
 
 </body>
 </html>
